# Grupo-PP1-TSIT4.0

./: README.md
Sprint N° 3 - Diseño e lmplementación del Proyecto/Metodos, Modulos y Protocolos de Comunicacion/LoRa/: Análisis de Problema LoRa.docx
Sprint N° 3 - Diseño e lmplementación del Proyecto/Metodos, Modulos y Protocolos de Comunicacion/MQTT/: configuraciones.txt  envio_mqtt.ino  mq2.py
Sprint N° 3 - Diseño e lmplementación del Proyecto/Sensores y Actuadores/GPS/: diagram.json
Sprint N° 3 - Diseño e lmplementación del Proyecto/Sensores y Actuadores/Sensor de Temperatura y Humedad - AHT10/: diagram.json
Sprint N° 3 - Diseño e lmplementación del Proyecto/Sensores y Actuadores/Sensor de Temperatura y Humedad - DHT11/: platformio.ini
Sprint N° 4 - Pruebas y Validaciones/Pruebas/Conexiones/: CMakeLists.txt
Sprint N° 4 - Pruebas y Validaciones/Pruebas/Conexiones/Bluetooth/src/: test_ble.cpp
Sprint N° 4 - Pruebas y Validaciones/Pruebas/Conexiones/LoRa/Receptor/src/: test_main.cpp
Sprint N° 4 - Pruebas y Validaciones/Pruebas/Conexiones/LoRa/Transmisor/src/: test_main.cpp
Sprint N° 4 - Pruebas y Validaciones/Pruebas/Conexiones/MQTT/: conexion.py  envio_mqtt.ino  mosquitto.conf  tabla.py  test_conexion.py  test_envio_mqtt.ino  test_mq2.py  test_tabla.py
Sprint N° 4 - Pruebas y Validaciones/Pruebas/Conexiones/WiFi/src/: test_wifi.cpp  wifi.cpp
Sprint N° 5 - Implementación y Documentación/: .gitignore  platformio.ini
Sprint N° 5 - Implementación y Documentación/lib/Conexiones/: Wfi.cpp  (+1 more)
Sprint N° 5 - Implementación y Documentación/src/: main.cpp
(+53 files in other folders)
